@@ -147,39 +147,60 @@ make_moniker (const char *name)
 }
 
 static void
+do_add_cb (BonoboMonikerASyncHandle *handle, SampleApp *app)
+{
+	SampleClientSite *site;
+	Bonobo_Embeddable  embeddable;
+	CORBA_Environment *ev;
+
+	ev = bonobo_moniker_async_handle_get_environment (handle);
+	if (BONOBO_EX (ev)) {
+		g_warning ("Moniker resolve demarshal exception '%s'\n",
+			   bonobo_exception_get_text (ev));
+		bonobo_moniker_async_handle_release (handle);
+		return;
+	}
+
+	embeddable = bonobo_moniker_async_handle_get_object (handle);
+
+	if (ev->_major != CORBA_NO_EXCEPTION)
+		g_warning ("Moniker get name exception '%s'\n",
+			   bonobo_exception_get_text (ev));
+
+	site = sample_app_add_embeddable (
+		app, bonobo_object_client_from_corba (embeddable),
+		"Kippers");
+
+	if (!site)
+		g_warning ("Failed to add embeddable to app");
+
+	bonobo_moniker_async_handle_release (handle);
+
+	/* FIXME: We need to deal with this reference somehow */
+/*	bonobo_object_release_unref (moniker, ev); */
+}
+
+static void
 resolve_and_add (SampleApp *app, Bonobo_Moniker moniker, const char *interface)
 {
-	Bonobo_Embeddable embeddable;
-	SampleClientSite *site;
 	CORBA_Environment ev;
 	char             *name;
 
 	CORBA_exception_init (&ev);
 
-	embeddable = bonobo_moniker_client_resolve_default (
-		moniker, interface, &ev);
-
-	if (ev._major != CORBA_NO_EXCEPTION) {
-		g_warning ("Moniker resolve exception '%s'\n",
+	bonobo_moniker_resolve_async_default (
+		moniker, interface, &ev, (BonoboMonikerCallback) do_add_cb, app);
+	
+	if (BONOBO_EX (&ev)) {
+		g_warning ("Moniker resolve async exception '%s'\n",
 			 bonobo_exception_get_text (&ev));
 		return;
 	}
 
 	name = bonobo_moniker_client_get_name (moniker, &ev);
 	g_print ("My moniker looks like '%s'\n", name);
-	
-	if (ev._major != CORBA_NO_EXCEPTION)
-		g_warning ("Moniker get name exception '%s'\n",
-			   bonobo_exception_get_text (&ev));
 
-	site = sample_app_add_embeddable (
-		app, bonobo_object_client_from_corba (embeddable),
-		name);
-
-	if (!site)
-		g_warning ("Failed to add embeddable to app");
-
-	bonobo_object_release_unref (moniker, &ev);
+	CORBA_free (name);
 }
 
 /*
