@@ -1,3 +1,8 @@
+2000-12-01  Michael Meeks  <michael@helixcode.com>
+
+	* container.c (resolve_and_add): upd.
+	(do_add): add async callback.
+
 2000-11-28  Michael Meeks  <michael@helixcode.com>
 
 	* container.c (make_moniker): upd.
